# rhio

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  WALKTHROUGH.md  config.example.yaml  docker-compose.yml  osv-scanner.toml  version.sh
.cargo/: audit.toml
charts/: values.yaml
dev/: index.yaml  rhio-0.1.3-dev.100.rhio-operator.a90e67f5.tgz  rhio-0.1.3-dev.101.rhio-operator.cbfa1f35.tgz  rhio-0.1.3-dev.102.rhio-operator.867fbc78.tgz  rhio-0.1.3-dev.103.rhio-operator.2f4b3bb0.tgz  rhio-0.1.3-dev.107.rhio-operator.6d40bc9d.tgz  rhio-0.1.3-dev.108.rhio-operator.fd7ad4a5.tgz  rhio-0.1.3-dev.110.rhio-operator.e39ec975.tgz  rhio-0.1.3-dev.111.rhio-operator.1432a703.tgz  rhio-0.1.3-dev.112.rhio-operator.3b2dfe92.tgz  rhio-0.1.3-dev.114.rhio-operator.329a366c.tgz  rhio-0.1.3-dev.115.rhio-operator.7f629365.tgz  rhio-0.1.3-dev.117.build-fix-for-ta.ba9c6eab.tgz  rhio-0.1.3-dev.117.demo.3f171711.tgz  rhio-0.1.3-dev.118.build-fix-for-ta.3cab8936.tgz  rhio-0.1.3-dev.118.demo.666ab7a2.tgz  rhio-0.1.3-dev.119.build-fix-for-ta.c52fb040.tgz  rhio-0.1.3-dev.119.demo.60aebb9c.tgz  rhio-0.1.3-dev.120.demo.0a1fd628.tgz  rhio-0.1.3-dev.121.build-fix-for-ta.dd8ab8ed.tgz  rhio-0.1.3-dev.121.demo.cb4bcb10.tgz  rhio-0.1.3-dev.123.docker-build-fix.7e68197f.tgz  rhio-0.1.3-dev.124.docker-build-fix.c35d01b9.tgz  rhio-0.1.3-dev.125.docker-build-fix.5b3d39c7.tgz  rhio-0.1.3-dev.126.docker-build-fix.d40eafb2.tgz  rhio-0.1.3-dev.127.docker-build-fix.fd2813ce.tgz  rhio-0.1.3-dev.128.docker-build-fix.9ec9892f.tgz  rhio-0.1.3-dev.129.docker-build-fix.715dd903.tgz  rhio-0.1.3-dev.130.docker-build-fix.9e87998d.tgz  rhio-0.1.3-dev.131.docker-build-fix.fcbdd28c.tgz  rhio-0.1.3-dev.132.docker-build-fix.3042d091.tgz  rhio-0.1.3-dev.133.docker-build-fix.1b8eeb97.tgz  rhio-0.1.3-dev.134.docker-build-fix.3469cc9f.tgz  rhio-0.1.3-dev.14.aarch64-support.c172c035.tgz  rhio-0.1.3-dev.14.aarch64-support.f8b65a09.tgz  (+210 more)
p2panda-net/: Cargo.toml
p2panda-net/examples/: chat.rs  node.rs
p2panda-net/src/: addrs.rs  config.rs  discovery.rs  handshake.rs  lib.rs  message.rs  network.rs  peers.rs  protocols.rs
p2panda-net/src/discovery/: mod.rs
p2panda-net/src/discovery/mdns/: dns.rs  mod.rs
p2panda-net/src/engine/: engine.rs  gossip.rs  message.rs  mod.rs
p2panda-sync/: Cargo.toml
p2panda-sync/src/: core.rs  engine.rs  lib.rs  log_height.rs  traits.rs
rhio/: .gitignore  Cargo.toml  README.md  config.example.toml  config.example.yaml  docker-compose.yml
rhio-blobs/: Cargo.toml
rhio-blobs/src/: bao_file.rs  lib.rs  paths.rs  s3_file.rs  store.rs  utils.rs
rhio-client/: Cargo.toml
rhio-client/src/: lib.rs  main.rs
rhio-config/: Cargo.toml
rhio-config/src/: configuration.rs  status.rs
rhio-core/: Cargo.toml
rhio-core/src/: bucket.rs  extensions.rs  lib.rs  log_id.rs  message.rs  nats.rs  operation.rs  private_key.rs  subject.rs  topic_id.rs
rhio-ffi/: .gitignore  Cargo.toml  README.md  pyproject.toml  pyvenv.cfg  requirements.txt
rhio-ffi/python/: config.py  hello.py  hello_world.py  main.py  sync.py
rhio-ffi/src/: config.rs  error.rs  lib.rs  messages.rs  node.rs  topic_id.rs  types.rs
rhio-http-api/: Cargo.toml
rhio-http-api/src/: api.rs  blocking.rs  client.rs  lib.rs  server.rs  status.rs
rhio-operator/: Cargo.toml  auth.yaml  rhio-service.yaml  rms.yaml  rmss.yaml  ros.yaml  ross.yaml  secret.yaml
rhio-operator/examples/: rhio-service.yaml  rms.yaml  rmss.yaml  ros.yaml  ross.yaml
rhio-operator/src/: cli.rs  configuration.rs  crdgen.rs  lib.rs  main.rs  rhio_controller.rs  rms_controller.rs  service_resource.rs  status.rs  stream_controller.rs  telemetry.rs
rhio-operator/src/api/: container.rs  message_stream.rs  message_stream_subscription.rs  mod.rs  object_store.rs  object_store_subscription.rs  role.rs  service.rs
rhio-operator/src/configuration/: configmap.rs  controllers.rs  error.rs  mod.rs  secret.rs
rhio-operator/src/configuration/fixtures/: mod.rs
rhio-operator/src/configuration/fixtures/full/: rhio.yaml  rhio_nats_credentials_secret.yaml  rhio_private_key_secret.yaml  rhio_s3_credentials_secret.yaml  rms.yaml  rmss.yaml  ros.yaml  ross.yaml
rhio-operator/src/configuration/fixtures/minimal/: rhio.yaml
rhio-operator/src/operations/: graceful_shutdown.rs  pdb.rs
rhio-operator/src/rhio/: builders.rs  controller.rs  error.rs  mod.rs  private_key.rs
rhio-operator/src/rhio/fixtures/: mod.rs  service.yaml  statefulset.yaml
rhio-py/: .gitignore  Cargo.toml  README.md  build.sh  uniffi.toml
rhio-py/python/: hello_world.py  main.py
rhio-py/src/: config.rs  gossip.rs  lib.rs  messages.rs  node.rs  topic_id.rs  types.rs
rhio/examples/: hello.rs  sync.rs  topics.rs
rhio/examples/sync/: README.md  main.rs
rhio/examples/sync/blobs2/: blobs.db
rhio/src/: actor.rs  aggregate.rs  config.rs  context.rs  context_builder.rs  events.rs  extensions.rs  health.rs  http_server.rs  lib.rs  logging.rs  main.rs  message.rs  messages.rs  metrics.rs  node.rs  operations.rs  private_key.rs  protocol.rs  ticket.rs  topic.rs  topic_id.rs  tracing.rs
rhio/src/blobs/: actor.rs  mod.rs  proxy.rs  watcher.rs
rhio/src/blobs/store/: bao_file.rs  mod.rs  s3_file.rs  tables.rs  util.rs
rhio/src/http/: api.rs  server.rs  status.rs
rhio/src/nats/: actor.rs  consumer.rs  message.rs  mod.rs
rhio/src/nats/client/: mod.rs  nats.rs  types.rs
rhio/src/nats/client/fake/: blocking.rs  client.rs  mod.rs  server.rs
rhio/src/network/: actor.rs  membership.rs  mod.rs  sync.rs
rhio/src/node/: actor.rs  config.rs  control.rs  mod.rs  rhio.rs  sanity.rs
rhio/src/p2panda/: actor.rs  mod.rs
rhio/src/panda/: actor.rs  extensions.rs  messages.rs  mod.rs  operations.rs  topic_id.rs
rhio/src/tests/: blob_replication.rs  configuration.rs  fake_rhio_server.rs  http_api.rs  message_replication.rs  mod.rs  service_configuration.rs  utils.rs
rhio/src/utils/: mod.rs
rhio/src/utils/nats/: error.rs  factory.rs  mod.rs  stream.rs
rhio/src/utils/retry/: stream.rs  types.rs
rhio/src/utils/retry_source/: stream.rs  types.rs
s3-server/: Cargo.toml
s3-server/src/: lib.rs
(+173 files in other folders)
