[workspace]
resolver = "2"
members = [
  "rhio",
  "rhio-blobs",
  "rhio-core",
  "s3-server",
  "rhio-operator",
  "rhio-config",
]

[workspace.lints.rust]

[workspace.dependencies]
anyhow = "1.0.93"
axum = "0.7.9"
axum-prometheus = "0.7.0"
async-nats = "0.37.0"
async-trait = "0.1.83"
bytes = "1.8.0"
ciborium = "0.2.2"
hex = "0.4.3"
clap = { version = "4.5.8", features = ["derive"] }
p2panda-blobs = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5" }
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5" }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5", default-features = false }
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5", features = ["cbor"], default-features = false }
rhio-blobs = { path = "rhio-blobs" }
rhio-core = { path = "rhio-core" }
rhio-operator = { path = "rhio-operator" }
rhio-config = { path = "rhio-config" }
s3-server = { path = "s3-server" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
futures-lite = "2.5.0"
futures-util = "0.3.30"
iroh-blobs = "0.25.0"
iroh-io = { version = "0.6.1", features = ["x-http"] }
rust-s3 = { version = "0.35.1", features = ["tokio", "blocking"] }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
url = "2.5.3"
directories = "5.0.1"
figment = { version = "0.10.19", features = ["env", "yaml"] }
rand = "0.8.5"
loole = "0.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tempfile = "3.10.1"
rusty-hook = "^0.11.2"
once_cell = "1.20.2"
dashmap = "6.1.0"
futures = { version = "0.3.28", default-features = false, features = ["std"] }
pin-project = "1.1.8"
s3s-fs = { version = "0.10.0" }
s3s = { version = "0.10.0" }
hyper-util = { version = "0.1.10", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
schemars = { version = "0.8.12", features = ["chrono"] }
built = { version = "0.7", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.83.0" }
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.7.0" }
snafu = { version = "0.8" }
strum = { version = "0.26", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }