[workspace]
resolver = "2"
members = [
  "rhio",
  "rhio-blobs",
  "rhio-core",
  "s3-server",
  "rhio-operator",
  "rhio-config",
  "rhio-http-api",
]

[workspace.lints.rust]

[workspace.dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-prometheus = "0.9.0"
async-nats = "0.42.0"
async-trait = "0.1.89"
bytes = "1.10.1"
ciborium = "0.2.2"
hex = "0.4.3"
clap = { version = "4.5.47", features = ["derive"] }
p2panda-blobs = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5" }
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5" }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5", default-features = false }
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5", features = ["cbor"], default-features = false }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda.git", rev = "26474c72151d304fc86aca147799b5dd7cd640d5" }
rhio-blobs = { path = "rhio-blobs" }
rhio-core = { path = "rhio-core" }
rhio-config = { path = "rhio-config" }
rhio-http-api = { path = "rhio-http-api" }
iroh-base = "0.25.0"
s3-server = { path = "s3-server" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34-deprecated"
futures-lite = "2.6.1"
futures-util = "0.3.31"
iroh-blobs = "0.25.0"
iroh-io = { version = "0.6.2", features = ["x-http"] }
rust-s3 = { version = "0.35.1", features = ["tokio", "blocking"] }
thiserror = "2.0.16"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
url = "2.5.7"
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
rand = "0.9.2"
loole = "0.4.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tempfile = "3.22.0"
rusty-hook = "^0.11.2"
once_cell = "1.21.3"
dashmap = "6.1.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
pin-project = "1.1.10"
s3s-fs = { version = "0.11.0" }
s3s = { version = "0.11.0" }
hyper-util = { version = "0.1.16", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
schemars = { version = "0.8.22", features = ["chrono"] }
built = { version = "0.7", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.97.0" }
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.7.0" }
snafu = { version = "0.8.9" }
strum = { version = "0.27.2", features = ["derive"] }
reqwest = { version = "0.12.23", features = ["json"] }
pin-project-lite = { version = "0.2.16" }

# pinned version of rusttls due to iroh-net and stackable-operator/kube-rs
rustls = { version = "0.23.31" }
chrono = { version = "0.4.42" }

# pinned version due to vulnerabilities
openssl = "=0.10.73"
slab = "=0.4.11"