[workspace]
resolver = "2"
members = [
  "rhio",
  "rhio-blobs",
  "rhio-core",
  "s3-server",
  "rhio-operator",
  "rhio-config",
  "rhio-http-api",
]

[workspace.lints.rust]

[workspace.dependencies]
anyhow = "1.0.100"
axum = "0.8.8"
axum-prometheus = "0.9.0"
async-nats = "0.45.0"
async-trait = "0.1.89"
bytes = "1.11.0"
ciborium = "0.2.2"
hex = "0.4.3"
clap = { version = "4.5.53", features = ["derive"] }
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", tag="v0.4.0" }
p2panda-net = { git = "https://github.com/p2panda/p2panda.git", default-features = false, tag="v0.4.0" }
p2panda-sync = { git = "https://github.com/p2panda/p2panda.git", features = ["cbor", "log-sync"], default-features = false, tag="v0.4.0" }
p2panda-discovery = { git = "https://github.com/p2panda/p2panda.git", tag="v0.4.0" }
p2panda-store = { git = "https://github.com/p2panda/p2panda.git", features=["memory"], tag="v0.4.0" }
p2panda-blobs = { git = "https://github.com/p2panda/p2panda.git", tag="v0.4.0" }
iroh-io = { version = "0.6.2", features = ["x-http"] }
iroh-base = "0.34.1"
iroh-blobs = "0.34.1"
rhio-blobs = { path = "rhio-blobs" }
rhio-core = { path = "rhio-core" }
rhio-config = { path = "rhio-config" }
rhio-http-api = { path = "rhio-http-api" }
s3-server = { path = "s3-server" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.148"
serde_yaml_bw = "2.5.1"
futures-lite = "2.6.1"
futures-util = "0.3.31"
rust-s3 = { version = "0.37.1", features = ["tokio", "blocking"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.17"
url = "2.5.7"
directories = "6.0.0"
figment = { version = "0.10.19", features = ["env", "yaml"] }
rand = "0.9.2"
loole = "0.4.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tempfile = "3.24.0"
rusty-hook = "^0.11.2"
once_cell = "1.21.3"
dashmap = "6.1.0"
futures = { version = "0.3.31", default-features = false, features = ["std"] }
pin-project = "1.1.10"
s3s-fs = { version = "0.11.1" }
s3s = { version = "0.11.1" }
hyper-util = { version = "0.1.19", features = [
    "server",
    "http1",
    "http2",
    "tokio",
] }
built = { version = "0.7", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.100.3" }
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.8.0" }

snafu = { version = "0.8.9" }
strum = { version = "0.27.2", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
pin-project-lite = { version = "0.2.16" }

# pinned version of rusttls due to iroh-net and stackable-operator/kube-rs
rustls = { version = "0.23.35" }
chrono = { version = "0.4.42" }

# pinned version due to product-config
schemars = { version = "1.2.0" }

# pinned version due to vulnerabilities
openssl = "=0.10.74"
slab = "=0.4.11"
crossbeam-channel = "=0.5.15"
ring = "=0.17.8"
quinn-proto = "=0.11.7"