[package]
name = "p2panda-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"

[dev-dependencies]
anyhow = "1.0.86"
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", branch = "v2" }
p2panda-store = { git = "https://github.com/p2panda/p2panda.git", branch = "v2" }
quinn = { version = "0.11.3", features = ["futures-io"] }
serde = "1.0.208"
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec", "compat"] }
