[package]
name = "rhio-blobs"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
futures-lite = "2.5.0"
iroh-blobs = "0.25.0"
iroh-io = { version = "0.6.1", features = ["x-http"] }
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", rev = "f31b37397c854d9e6cfb450c1b6ca372ddc1f0eb" }
rust-s3 = { version = "0.35.1", features = ["tokio"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
tokio = "1.41.1"
tracing = "0.1.40"
url = "2.5.3"
