[package]
name = "rhio-blobs"
version = "0.1.1"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
futures-lite.workspace = true
iroh-blobs.workspace = true
iroh-io.workspace = true
p2panda-core.workspace = true
rust-s3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
chrono.workspace = true
dashmap.workspace = true