[package]
name = "rhio-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "rhio_client"

[dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", branch = "v2" }
p2panda-store = { git = "https://github.com/p2panda/p2panda.git", branch = "v2" }
rhio-core = { path = "../rhio-core" }
tokio = "1.38.0"

[lints]
workspace = true
