[package]
name = "rhio-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "rhio_client"

[dependencies]
anyhow = "1.0.86"
async-nats = "0.35.1"
clap = { version = "4.5.16", features = ["derive"] }
p2panda-core = { git = "https://github.com/p2panda/p2panda.git", rev = "3b9c8af7064ba489ef5eab9d4a165fab7b8c40c4" }
p2panda-store = { git = "https://github.com/p2panda/p2panda.git", rev = "3b9c8af7064ba489ef5eab9d4a165fab7b8c40c4" }
rhio-core = { path = "../rhio-core" }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "signal", "macros"] }

[lints]
workspace = true
