[package]
name = "rhio-core"
version = "0.1.1"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
bytes.workspace = true
ciborium.workspace = true
hex.workspace = true
p2panda-core.workspace = true
rhio-blobs.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile.workspace = true