[package]
name = "rhio-operator"
version = "0.1.0"
edition = "2021"
default-run = "rhio-operator"
license = "Apache-2.0"
publish = false

[[bin]]
doc = false
name = "rhio-operator"
path = "src/main.rs"

[[bin]]
doc = false
name = "crdgen"
path = "src/crdgen.rs"

[lib]
name = "rhio_operator"
path = "src/lib.rs"

[features]
default = []
telemetry = ["tonic", "opentelemetry-otlp"]

[dependencies]
actix-web = "4.4.0"
futures = "0.3.28"
tokio = { version = "1.40", features = ["full"] }
k8s-openapi = { version = "0.22.0", features = ["latest"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
prometheus = "0.13.3"
chrono = { version = "0.4.26", features = ["serde"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.20.0"
opentelemetry = { version = "0.20.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.13.0", features = ["tokio"], optional = true }
tonic = { version = "0.9", optional = true }
thiserror = "1.0.47"
anyhow = "1.0.75"
snafu = "0.8"
strum = { version = "0.26", features = ["derive"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "stackable-operator-0.82.0" }
product-config = { git = "https://github.com/stackabletech/product-config.git", tag = "0.7.0" }

[dev-dependencies]
assert-json-diff = "2.0.2"
http = "1"
hyper = "1"
tower-test = "0.4.0"

[build-dependencies]
built = { version = "0.7", features = ["chrono", "git2"] }

[dependencies.kube]
features = ["runtime", "client", "derive" ]
version = "0.91.0"

# testing new releases - ignore
#git = "https://github.com/kube-rs/kube.git"
#branch = "main"
#rev = "19b90ad3a4dbc83e1dd742847c7707333259b1bb"
#path = "../kube/kube"
