[package]
name = "rhio-ffi"
version = "0.1.0"
edition = "2021"

[package.metadata.maturin]
name = "rhio"

[lib]
name = "rhio_ffi"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.28.0", features = ["cli"] }

[dependencies-build]
uniffi = { version = "0.28.0", features = ["build"] }
