[package]
name = "rhio"
description = "Peer-to-peer NATS message routing and S3 object sync solution"
version = "0.1.1"
edition = "2021"
publish = false
default-run = "rhio"

[lints]
workspace = true

[lib]
name = "rhio"

[[bin]]
name = "rhio"

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-prometheus.workspace = true
ciborium.workspace = true
clap.workspace = true
directories.workspace = true
figment.workspace = true
futures-util.workspace = true
hex.workspace = true
loole.workspace = true
p2panda-blobs.workspace = true
p2panda-core.workspace = true
p2panda-net.workspace = true
p2panda-sync.workspace = true
rand.workspace = true
rhio-blobs.workspace = true
rhio-core.workspace = true
rust-s3.workspace = true
serde.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
pin-project.workspace = true
bytes.workspace = true
futures.workspace = true

[dev-dependencies]
figment = { workspace = true, features = ["test"] }
once_cell.workspace = true
dashmap.workspace = true
serde_json.workspace = true
